Diarios/kubernetes_ejemplos/jetty-tomcat-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    image.registry: "https://hub.docker.com/"
    image.owner: "pjsanchez@devcenter.es"
    jtj.purpose: "Three web apps ingress"
spec:
  rules:
  - host: demo.pjsanchezdevcenter.es
    http:
      paths:
      - path: /appj
        pathType: Prefix
        backend:
          service:
            name: jetty-1-service
            port: 
              number: 8080
      - path: /appt
        pathType: Prefix
        backend:
          service:
            name: tomcat-service
            port: 
              number: 8080
